# yak-kernel

./: .gitmodules  CMakeLists.txt
kernel/: CMakeLists.txt
kernel/arch/generic-limine/: entry.c  fb.c  fireworks.c
kernel/arch/x86_64/: CMakeLists.txt  linker.lds
kernel/arch/x86_64/include/yak/: arch-context.h  arch-cpudata.h  arch-mm.h  arch-syscall.h  percpu.h
kernel/arch/x86_64/src/: PlatformExpert.cc  apic.c  asm.h  fpu.c  gdt.c  hpet.c  idt.S  init.c  ipl.c  isr.c  kvmclock.c  pci.c  pmap.c  sched.S  sched.c  syscall.S  tss.h
kernel/fs/: devfs.c  tmpfs.c  tmpfs.h
kernel/include/: assert.h
kernel/include/yak/: bitset.h  clocksource.h  console.h  cpu.h  cpudata.h  elf.h  file.h  hint.h  init.h  ipi.h  kevent.h  log.h  macro.h  mutex.h  object.h  process.h  queue.h  refcount.h  ringbuffer.h  rwlock.h  sched.h  semaphore.h  spinlock.h  status.h  symbol.h  syscall.h  timer.h  timespec.h  tree.h  tty.h  types.h  wait.h
kernel/include/yak-abi/: blkcnt_t.h  blksize_t.h  dev_t.h  fcntl.h  ino_t.h  ioctls.h  nlink_t.h  stat.h  syscall.h  termios.h
kernel/include/yak/fs/: devfs.h  vfs.h
kernel/include/yak/vm/: amap.h  kmem.h  map.h  pmap.h  pmm.h
kernel/include/yakpp/: Array.hh  ClassInfo.hh  Dictionary.hh  Event.hh  LockGuard.hh  Mutex.hh  Object.hh  SpinLock.hh  Status.hh  String.hh  Thread.hh  meta.hh
kernel/include/yio/: Device.hh  EventSource.hh  InterruptEventSource.hh  IoRegistry.hh  Personality.hh  Service.hh  TreeNode.hh  WorkLoop.hh  acpi.h  pci.h  pci_ecam.h
kernel/include/yio/acpi/: AcpiDevice.hh  AcpiPersonality.hh  event.h  sleep.h
kernel/include/yio/pci/: Pci.hh  PciBus.hh  PciDevice.hh  PciPersonality.hh
kernel/io/: CMakeLists.txt  Device.cc  EventSource.cc  Personality.cc  Registry.cc  Service.cc  TreeNode.cc  WorkLoop.cc
kernel/io/acpi/: AcpiDevice.cc  AcpiPersonality.cc  CMakeLists.txt  acpi.c  event.c  glue.c
kernel/io/drivers/: ps2.cc
kernel/io/drivers/ps2/: CMakeLists.txt  PS2Controller.hh  PS2Keyboard.cc
kernel/io/pci/: CMakeLists.txt  PciBus.cc  PciDevice.cc  PciPersonality.cc  pci-utils.h  pci.c  pci_ecam.c
kernel/io/tty/: console.c  n_tty.c  tty.c
kernel/src/: CMakeLists.txt  clocksource.c  console.c  cpudata.c  elf.c  file.c  init.c  init_node.c  initrd.c  jobctl.c  kevent.c  kinfo.c  mutex.c  object.c  panic.c  printk.c  ringbuffer.c  root.c  rwlock.c  semaphore.c  status.c  symbol.c  timer.c
kernel/src-cpp/: Array.cc  CMakeLists.txt  Dictionary.cc  Event.cc  Object.cc  String.cc
kernel/src/fs/: CMakeLists.txt  generic.c  vfs.c
kernel/src/irq/: CMakeLists.txt  dpc.c  ipi.c  ipl.c  softint.c
kernel/src/rt/: CMakeLists.txt  cplusplus.cc  profiler.c  stack.c  ubsan.c
kernel/src/sched/: CMakeLists.txt  launch.c  process.c  sched.c  thread.c  wait.c
kernel/src/syscall/: CMakeLists.txt  clock.c  common.h  exec.c  fcntl.c  file.c  fork.c  mmap.c  poll.c  ps.c  syscall.c  waitpid.c
kernel/src/vm/: CMakeLists.txt  amap.c  anon.c  fault.c  generic_pmap.c  heap.c  kmem_slab.c  map.c  pmm.c  vmem.c
toolchains/: Generic.cmake
