add_subdirectory(vm)
add_subdirectory(rt)
add_subdirectory(fs)
add_subdirectory(irq)
add_subdirectory(syscall)
add_subdirectory(sched)

yak_add_sources(
	cpudata.c
	init.c
	init_node.c
	elf.c
	ringbuffer.c
	kevent.c
	initrd.c
	panic.c
	kinfo.c
	object.c
	status.c
	subr_tree.c
	hashtable.c
	printk.c
	root.c
	rwlock.c
	semaphore.c
	spinlock.c
	mutex.c
	jobctl.c
	file.c
	timer.c
)
